tests/ui/impl-trait/auto-trait-leakage/opaque-hidden-ty-inference.stderr
error[E0283]: type annotations needed: cannot satisfy `impl Sized: Unpin`
  --> $DIR/opaque-hidden-ty-inference.rs:25:31
   |
LL |     let opaque = require_auto(define::<T>());
   |                  ------------ ^^^^^^^^^^^^^
   |                  |
   |                  required by a bound introduced by this call
   |
   = note: cannot satisfy `impl Sized: Unpin`
note: required by a bound in `require_auto`
  --> $DIR/opaque-hidden-ty-inference.rs:12:20
   |
LL | fn require_auto<T: Unpin>(x: T) -> T {
   |                    ^^^^^ required by this bound in `require_auto`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
